--- a/index.html
+++ b/index.html
@@ -3,64 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bahtiyar Ayhan | Stratejik Yönetim</title>
+    <title>Bahtiyar Ayhan | Stratejik Yönetim & Danışmanlık</title>
     <style>
-        :root { --p:#2c3e50; --a:#e67e22; --w:#fff; --g:#d4af37; --wa:#25D366; }
-        body { font-family: sans-serif; background:#f4f7f6; color:var(--p); margin:0; padding:0; }
-        .c { padding:1.5rem; max-width:900px; margin:auto; }
-        .box { background:var(--w); padding:20px; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.1); margin-bottom:20px; }
-        .cta { background:linear-gradient(135deg,#2c3e50,#1a252f); color:white; padding:30px; border-radius:15px; text-align:center; border:3px solid var(--g); margin:20px 0; }
-        .btn-m { display:inline-block; background:var(--g); color:var(--p); padding:15px 30px; text-decoration:none; border-radius:50px; font-weight:bold; margin-top:15px; }
-        .grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:15px; margin:20px 0; }
-        .card { background:#f9fffb; border-bottom:4px solid #27ae60; padding:20px; border-radius:12px; text-align:center; }
-        .award { background:#fffdf2; border:1px solid var(--g); padding:20px; border-radius:15px; text-align:center; margin:20px 0; }
-        .cert-g { display:grid; grid-template-columns:repeat(auto-fit,minmax(120px,1fr)); gap:10px; margin-top:20px; }
-        .cert-card { background:white; padding:8px; border-radius:8px; text-align:center; box-shadow:0 2px 5px rgba(0,0,0,0.1); font-size:12px; }
-        .footer { background:var(--p); color:var(--w); padding:2rem 1rem; text-align:center; }
-        .btn { color:white; padding:12px 20px; text-decoration:none; border-radius:50px; font-weight:bold; display:inline-block; margin:5px; }
+        :root { --primary: #2c3e50; --accent: #e67e22; --white: #ffffff; --whatsapp: #25D366; --gold: #d4af37; }
+        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; padding: 0; line-height: 1.6; }
+        .hero { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
+        .container { padding: 2rem; max-width: 950px; margin: auto; }
+        
+        /* FELSEFE VE YAZI BÖLÜMÜ */
+        .article-box { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2.5rem; border-top: 5px solid var(--accent); }
+        .quote { font-style: italic; color: var(--accent); font-weight: bold; border-left: 5px solid var(--accent); padding-left: 15px; margin-bottom: 20px; font-size: 1.2rem; }
+        .felsefe-text p { margin-bottom: 15px; text-align: justify; }
+
+        /* DARBOĞAZ KUTUSU */
+        .cta-section { background: linear-gradient(135deg, #2c3e50 0%, #1a252f 100%); color: white; padding: 40px; border-radius: 20px; text-align: center; margin: 40px 0; border: 3px solid var(--gold); }
+        .cta-btn { display: inline-block; background: var(--gold); color: #2c3e50; padding: 18px 45px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.2rem; margin-top: 15px; transition: 0.3s; }
+        .cta-btn:hover { transform: scale(1.05); background: white; }
+
+        /* BAŞARI RAKAMLARI */
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin: 25px 0; }
+        .card { background: var(--white); border-bottom: 4px solid #27ae60; padding: 25px; border-radius: 15px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
+
+        /* ÖDÜL */
+        .award-section { background: #fffdf2; border: 2px solid var(--gold); padding: 25px; border-radius: 15px; text-align: center; margin: 25px 0; }
+        .award-section img { max-width: 100%; border-radius: 10px; margin-top: 15px; }
+
+        /* SERTİFİKALAR */
+        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px; margin-top: 2rem; }
+        .cert-card { background: white; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
+        .cert-card img { width: 100%; border-radius: 5px; }
+
+        /* FOOTER & SAYAÇ */
+        .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; margin-top: 3rem; }
+        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin: 25px 0; }
+        .contact-btn { display: inline-block; color: white; padding: 14px 30px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 150px; }
+        .whatsapp-btn { background: var(--whatsapp); }
+        .email-btn { background: var(--accent); }
+        .phone-btn { background: #2980b9; }
     </style>
 </head>
 <body>
-    <header style="background:var(--p); color:white; padding:2rem; text-align:center;">
+    <header class="hero">
         <h1>BAHTİYAR AYHAN</h1>
-        <p>Stratejik Üretim Yönetimi & Operasyonel Mükemmellik</p>
+        <p>Stratejik Üretim Yönetimi & Operasyonel Mükemmellik Uzmanı</p>
     </header>
-    <div class="c">
-        <div class="box">
-            <h2>Yönetim Felsefesi</h2>
-            <p>Çok lokasyonlu şirketlerde verimlilik ve maliyet odaklı sürdürülebilir sistemler kuruyorum.</p>
-        </div>
-        <div class="cta">
-            <h2>HIZLI TEŞHİS & ÇÖZÜM</h2>
-            <p><strong>"Fabrikanızdaki darboğazı 48 saat içinde teşhis edelim. İlk görüşme ücretsizdir."</strong></p>
-            <a href="https://wa.me/905427244122" class="btn-m">RANDEVU AL</a>
-        </div>
-        <div class="grid">
-            <div class="card"><h3>🔥 %75 Fire Azaltma</h3><p>Süreç optimizasyonu ile kârlılık sağladık.</p></div>
-            <div class="card"><h3>⚡ %25 Kapasite Artışı</h3><p>Ek yatırımsız verimlilik artışı sağladık.</p></div>
-        </div>
-        <div class="award">
-            <h3 style="color:var(--g)">🏆 Ulusal Uygulama Ödülü</h3>
-            <img src="Ödül.png" style="max-width:100%; border-radius:10px; margin-top:10px;">
-        </div>
-        <h3 style="text-align:center">📜 Sertifikalar</h3>
-        <div class="cert-g">
-            <div class="cert-card"><img src="sertifika1.png" width="100%"><p>Six Sigma</p></div>
-            <div class="cert-card"><img src="sertifika2.png" width="100%"><p>Supply Chain</p></div>
-            <div class="cert-card"><img src="sertifika3.png" width="100%"><p>Cost Reduction</p></div>
-            <div class="cert-card"><img src="sertifika4.png" width="100%"><p>OpEx</p></div>
-            <div class="cert-card"><img src="sertifika5.png" width="100%"><p>Proje</p></div>
-            <div class="cert-card"><img src="sertifika6.png" width="100%"><p>Global</p></div>
-            <div class="cert-card"><img src="sertifika7.png" width="100%"><p>Business</p></div>
-        </div>
-    </div>
-    <footer class="footer">
-        <div style="margin-bottom:20px;">
-            <a href="tel:+905427244122" class="btn" style="background:#2980b9">📞 Ara</a>
-            <a href="https://wa.me/905427244122" class="btn" style="background:var(--wa)">💬 WhatsApp</a>
-            <a href="mailto:bbudumlu@hotmail.com" class="btn" style="background:var(--a)">✉️ E-posta</a>
-        </div>
-        <p>📊 Toplam Ziyaret: <img src="https://komarev.com/ghpvc/?username=BahtiyarAyhan&color=orange&style=flat-square&label=GIRIŞ" style="vertical-align:middle;"></p>
-    </footer>
-</body>
-</html>
+
+    <div class="container">
+        <section class="article-box">
+            <div class="quote">
+                "Fabrika Yönetimlerinde çok lokasyonlu şirketlerde Üretim, Planlama, İnsan Kaynakları, İdari İşler, Satinalma departmanlarında verimlilik, sadece süreçleri değil; bakış açısını da dönüştürmekle başlar."
+            </div>
+            <div class="felsefe-text">
+                <p>Görev aldığım şirketlerde, tüm departman süreçlerinin iyileştirilmesi ve operasyonel mükemmellik hedefiyle aktif rol alıyorum. Tüm departmanların entegre Yönetim sistemi ile verimliliği artırırken maliyetleri düşürerek şirketin rekabet gücünü ileriye taşıdım.</p>
+                <p>Haftalık koordinasyon toplantılarıyla güçlendirdiğim, iş birliğine dayalı yönetim anlayışım, ekip motivasyonunu ve uyumu artırıyor. Yönetim ve idari kadrolarla kurduğum yakın iş birliği sayesinde, yenilikçi ve uygulanabilir çözümlerle sürekli iyileştirmeye odaklanıyorum.</p>
+                <p>Stratejik planlama, problem çözme ve takım ruhunu harmanlayan yaklaşımım; şirketlerin sürdürülebilir büyümesine ve sektörde lider konuma ulaşmasına katkı sağlamaya devam ediyor ve bunun sadece bilgi birikimi değil, kültür ve felsefe değişikliğinin de önemli olduğuna inanıyorum.</p>
+            </div>
