--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
         body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; padding: 0; line-height: 1.6; }
         .hero { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
         .container { padding: 2rem; max-width: 950px; margin: auto; }
-        .felsefe-box { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2.5rem; border-top: 5px solid var(--accent); }
+        .box { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2.5rem; border-top: 5px solid var(--accent); }
         .quote { font-style: italic; color: var(--accent); font-weight: bold; border-left: 5px solid var(--accent); padding-left: 15px; margin-bottom: 20px; font-size: 1.2rem; }
-        .felsefe-text p { margin-bottom: 15px; text-align: justify; }
         .cta-section { background: linear-gradient(135deg, #2c3e50 0%, #1a252f 100%); color: white; padding: 40px; border-radius: 20px; text-align: center; margin: 40px 0; border: 3px solid var(--gold); }
         .cta-btn { display: inline-block; background: var(--gold); color: #2c3e50; padding: 18px 45px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.2rem; margin-top: 15px; }
+        
+        /* OSGB / İŞ ORTAKLIĞI BÖLÜMÜ */
+        .partnership-box { background: #eef2f7; padding: 30px; border-radius: 15px; border: 2px dashed #2980b9; margin: 40px 0; text-align: center; }
+        .partnership-box h2 { color: #2980b9; margin-top: 0; }
+        
         .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin: 25px 0; }
         .card { background: var(--white); border-bottom: 4px solid #27ae60; padding: 25px; border-radius: 15px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
-        .award-section { background: #fffdf2; border: 2px solid var(--gold); padding: 25px; border-radius: 15px; text-align: center; margin: 25px 0; }
-        .award-section img { max-width: 100%; border-radius: 10px; margin-top: 15px; }
-        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px; margin-top: 2rem; }
+        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 15px; margin-top: 2rem; }
         .cert-card { background: white; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
         .cert-card img { width: 100%; border-radius: 5px; }
         .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; margin-top: 3rem; }
@@ -33,31 +35,31 @@
     </header>
 
     <div class="container">
-        <section class="felsefe-box">
-            <div class="quote">
-                "Fabrika Yönetimlerinde çok lokasyonlu şirketlerde Üretim, Planlama, İnsan Kaynakları, İdari İşler, Satinalma departmanlarında verimlilik, sadece süreçleri değil; bakış açısını da dönüştürmekle başlar."
-            </div>
-            <div class="felsefe-text">
-                <p>Görev aldığım şirketlerde, tüm departman süreçlerinin iyileştirilmesi ve operasyonel mükemmellik hedefiyle aktif rol alıyorum. Tüm departmanların entegre Yönetim sistemi ile verimliliği artırırken maliyetleri düşürerek şirketin rekabet gücünü ileriye taşıdım.</p>
-                <p>Haftalık koordinasyon toplantılarıyla güçlendirdiğim, iş birliğine dayalı yönetim anlayışım, ekip motivasyonunu ve uyumu artırıyor. Yönetim ve idari kadrolarla kurduğum yakın iş birliği sayesinde, yenilikçi ve uygulanabilir çözümlerle sürekli iyileştirmeye odaklanıyorum.</p>
-                <p>Stratejik planlama, problem çözme ve takım ruhunu harmanlayan yaklaşımım; şirketlerin sürdürülebilir büyümesine ve sektörde lider konuma ulaşmasına katkı sağlamaya devam ediyor ve bunun sadece bilgi birikimi değil, kültür ve felsefe değişikliğinin de önemli olduğuna inanıyorum.</p>
-            </div>
+        <section class="box">
+            <div class="quote">"Verimlilik, sadece süreçleri değil; bakış açısını da dönüştürmekle başlar."</div>
+            <p>Fabrika Yönetimlerinde çok lokasyonlu şirketlerde Üretim, Planlama, İnsan Kaynakları, İdari İşler, Satinalma departmanlarında tüm süreçlerin iyileştirilmesi ve operasyonel mükemmellik hedefiyle aktif rol alıyorum.</p>
+            <p>Haftalık koordinasyon toplantıları ve iş birliğine dayalı yönetim anlayışım ile şirketlerin sürdürülebilir büyümesine ve kültür değişikliğine katkı sağlıyorum.</p>
         </section>
 
         <div class="cta-section">
             <h2>HIZLI TEŞHİS & ÇÖZÜM</h2>
             <p><strong>"Fabrikanızdaki darboğazı 48 saat içinde teşhis edelim. İlk görüşme ücretsizdir."</strong></p>
-            <a href="https://wa.me/905427244122" class="cta-btn">RANDEVU AL</a>
+            <a href="https://wa.me/905427244122" class="cta-btn">ŞİMDİ RANDEVU AL</a>
         </div>
 
         <div class="grid">
-            <div class="card"><h3>🔥 %75 Fire Azaltma</h3><p>Verimlilik odaklı süreç yönetimi.</p></div>
-            <div class="card"><h3>⚡ %25 Kapasite Artışı</h3><p>Yatırımsız üretim artışı.</p></div>
+            <div class="card"><h3>🔥 %75 Fire Azaltma</h3><p>Maliyet odaklı süreç yönetimi.</p></div>
+            <div class="card"><h3>⚡ %25 Kapasite Artışı</h3><p>Yatırımsız üretim hacmi artışı.</p></div>
         </div>
 
-        <div class="award-section">
+        <section class="partnership-box">
+            <h2>🤝 OSGB & Danışmanlık İş Ortaklığı</h2>
+            <p>Portföyünüzdeki firmalara verimlilik ve operasyonel mükemmellik alanında katma değerli çözümler sunmak için çözüm ortağınız olmaya hazırım. OSGB hizmetlerinizi "Stratejik Verimlilik" ile güçlendirebiliriz.</p>
+        </section>
+
+        <div style="text-align: center; margin: 30px 0;">
             <h3>🏆 Ulusal Uygulama Ödülü</h3>
-            <img src="Ödül.png" alt="Ödül">
+            <img src="Ödül.png" style="max-width:100%; border-radius:15px; border: 2px solid var(--gold);">
         </div>
 
         <div class="cert-grid">
@@ -74,8 +76,8 @@
     <footer class="footer">
         <div class="btn-group">
             <a href="tel:+905427244122" class="contact-btn" style="background:#2980b9">📞 Ara</a>
-            <a href="https://wa.me/905427244122" class="contact-btn" style="background:#25D366">💬 WhatsApp</a>
-            <a href="mailto:bbudumlu@hotmail.com" class="contact-btn" style="background:#e67e22">✉️ E-posta</a>
+            <a href="https://wa.me/905427244122" class="contact-btn" style="background:var(--whatsapp)">💬 WhatsApp</a>
+            <a href="mailto:bbudumlu@hotmail.com" class="contact-btn" style="background:var(--accent)">✉️ E-posta</a>
         </div>
         <p>📊 Toplam Ziyaret: <img src="https://komarev.com/ghpvc/?username=BahtiyarAyhan&color=orange&style=flat-square&label=GİRİŞ" style="vertical-align:middle;"></p>
     </footer>
